# tt-metal

./: CLAUDE.md  conftest.py  install_dependencies.sh
ttnn/cpp/ttnn/operations/experimental/attention/: CMakeLists.txt
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input/: extract_attention_input.cpp  extract_attention_input.hpp  extract_attention_input_pybind.cpp  extract_attention_input_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input/device/: extract_attention_input_op.cpp  extract_attention_input_op.hpp  extract_attention_input_program_factory.cpp  extract_attention_input_program_factory.hpp
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input_decode/: extract_attention_input_decode.cpp  extract_attention_input_decode.hpp  extract_attention_input_decode_pybind.cpp  extract_attention_input_decode_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input_decode/device/: extract_attention_input_decode_op.cpp  extract_attention_input_decode_op.hpp  extract_attention_input_decode_program_factory.cpp  extract_attention_input_decode_program_factory.hpp
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input_prefill/: extract_attention_input_prefill.cpp  extract_attention_input_prefill.hpp  extract_attention_input_prefill_pybind.cpp  extract_attention_input_prefill_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/attention/extract_attention_input_prefill/device/: extract_attention_input_prefill_op.cpp  extract_attention_input_prefill_op.hpp  extract_attention_input_prefill_program_factory.cpp  extract_attention_input_prefill_program_factory.hpp
ttnn/cpp/ttnn/operations/experimental/moe/: CMakeLists.txt  README.md
ttnn/cpp/ttnn/operations/experimental/moe/local_reduce_moe_output/: local_reduce_moe_output.cpp  local_reduce_moe_output.hpp  local_reduce_moe_output_pybind.cpp  local_reduce_moe_output_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/local_reduce_moe_output/device/: local_reduce_moe_output_op.cpp  local_reduce_moe_output_op.hpp  local_reduce_moe_output_program_factory.cpp  local_reduce_moe_output_program_factory.hpp
ttnn/cpp/ttnn/operations/experimental/moe/moe_bmm/: moe_bmm.cpp  moe_bmm.hpp  moe_bmm_pybind.cpp  moe_bmm_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/moe_bmm/device/: moe_bmm_op.cpp  moe_bmm_op.hpp  moe_bmm_program_factory.cpp  moe_bmm_program_factory.hpp
ttnn/cpp/ttnn/operations/experimental/moe/moe_down_projection/: moe_down_projection.cpp  moe_down_projection.hpp  moe_down_projection_pybind.cpp  moe_down_projection_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/moe_expert_projection/: moe_expert_projection.cpp  moe_expert_projection.hpp  moe_expert_projection_pybind.cpp  moe_expert_projection_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/prepare_moe_mapping_tensor/: prepare_moe_mapping_tensor.cpp  prepare_moe_mapping_tensor.hpp  prepare_moe_mapping_tensor_pybind.cpp  prepare_moe_mapping_tensor_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/prepare_moe_routing_tensors/: prepare_moe_routing_tensors.cpp  prepare_moe_routing_tensors.hpp  prepare_moe_routing_tensors_pybind.cpp  prepare_moe_routing_tensors_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/projection_to_intermediate/: projection_to_intermediate.cpp  projection_to_intermediate.hpp  projection_to_intermediate_pybind.cpp  projection_to_intermediate_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/projection_to_output/: projection_to_output.cpp  projection_to_output.hpp  projection_to_output_pybind.cpp  projection_to_output_pybind.hpp
ttnn/cpp/ttnn/operations/experimental/moe/scatter_moe_input/: scatter_moe_input.cpp  scatter_moe_input.hpp  scatter_moe_input_pybind.cpp  scatter_moe_input_pybind.hpp
(+233 files in other folders)
